--- a/index.html
+++ b/index.html
@@ -6,19 +6,40 @@
     <title>Adriel</title>
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/styles.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 </head>
 <body>
     <header>
-        <section>
-            
-        </section>
+        <h1 id="titulo1">HOLA MUNDO</h1>
     </header>
     <main>
+     <section class="presentacion">
+        <div >
+            <p class="sobreMi">sobre mi: <br></p>
+            <img class="yo" src="./fotos/IMG_20240331_000031.jpg" alt="yo">
+                <p class="sobreMi">  soy una persona resiliente con una determinacion inegable una persona que busca lo que quiere y no para hasta conseguirlo. <br>   Me considero una persona feliz que le gusta dar y resivir amor, mis amigos son todo y por algunos hasta dejaria la vida, ya que para mi el tiempo es lo mas valioso
+        </div>
+     </section>
+     <section class="tecnologias">
+        <p>Mis Tecnologias favoritas son:</p>
+        <p></p>
+        <div class="fotos">
+            <p class="pfotos1">html</p>
+            <img class="radio" src="https://imgs.search.brave.com/np9Suzrp_3kNkWQhHCshEnLZq-1foqWL_DUMi9XXyWE/rs:fit:860:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvY29tbW9ucy8z/LzM4L0hUTUw1X0Jh/ZGdlLnN2Zw.svg" alt="html">
+            <p class="pfotos2">css</p>
+            <img class="radio" src="https://imgs.search.brave.com/eqhJaj3kSr1R7zEc2KceOWNwUGTHQxNOgZ5vj6Xy6hw/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9kZXNh/cnJvbGxvd2ViLmNv/bS9zdG9yYWdlL3Rh/Z19pbWFnZXMvYWN0/dWFsL3NUMVJMcERI/ekluQVR1S25EVWt3/WGhLb2FJT3J0Uzk3/Z0J0Z2lRNk0ucG5n" alt="css">
+            <p class="pfotos3">javascript</p>
+            <img class="radio" src="https://imgs.search.brave.com/nQFdkbBtRdnUMRLD2d-iV4y7HK1t3zxB6np9jevVV2Y/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9kZXNh/cnJvbGxvd2ViLmNv/bS9zdG9yYWdlL3Rh/Z19pbWFnZXMvYWN0/dWFsLzNCcFVEQnND/M29mQnk0dG9yVDFa/aVVGNmhkb25xcFJI/ODQxTWVNRE0ucG5n" alt="js">
+        </div>
+     </section>
+     <section class="tecnologias">
+        <p>Mis actividades favoritas:</p>
+        <div class="seccionDiv">
 
+        </div>
+    </section>
     </main>
     <footer>
-
     </footer>
 </body>
 </html>
