tercer commit segundo dia completo

--- a/index.html
+++ b/index.html
@@ -35,11 +35,32 @@
      <section class="tecnologias">
         <p>Mis actividades favoritas:</p>
         <div class="seccionDiv">
-
+            <label for="titulo"> titulo</label>
+            <input type="text" id="titulo" name="titulo">
+        </div>
+        <div class="seccionDiv">
+            <label for="descripcion">descripcion</label>
+            <textarea name="descripcion" id="descripcion" cols="30" rows="10"></textarea>
+        </div>
+        <div class="seccionDiv">
+            <label for="url">url de la imagen</label>
+            <input type="url" name="url" id="url">
+        </div>
+        <div class="divBoton">
+            <button class='glowing-btn'><span class='glowing-txt'>C<span class='faulty-letter'>L</span>ICK</span></button>
         </div>
     </section>
-    </main>
-    <footer>
-    </footer>
+    <section id="contenedor">
+        <!-- Espacio para las tarjetas -->
+    </section>
+</main>
+<footer>
+    <section>
+        <div class="divDelFooter">
+            <p>adriel perez</p>
+        </div>
+    </section>
+</footer>
+<script src="./scripts/index.js"></script>
 </body>
 </html>
