--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div >
             <p class="sobreMi">sobre mi: <br></p>
             <img class="yo" src="./fotos/IMG_20240331_000031.jpg" alt="yo">
-                <p class="sobreMi">  soy una persona resiliente con una determinacion inegable una persona que busca lo que quiere y no para hasta conseguirlo. <br>   Me considero una persona feliz que le gusta dar y resivir amor, mis amigos son todo y por algunos hasta dejaria la vida, ya que para mi el tiempo es lo mas valioso
+                <p class="sobreMi">  soy una persona resiliente con una determinacion inegable una persona que busca lo que quiere y no para hasta conseguirlo. <br>   Me considero una persona feliz que le gusta dar y resivir amor, mis amigos son todo y por algunos hasta dejaria la vida, ya que para mi el tiempo es lo mas valioso.
         </div>
      </section>
      <section class="tecnologias">
