--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <div >
             <p class="sobreMi">sobre mi: <br></p>
             <img class="yo" src="./fotos/IMG_20240331_000031.jpg" alt="yo">
-                <p class="sobreMi">  soy una persona resiliente con una determinacion inegable una persona que busca lo que quiere y no para hasta conseguirlo. <br>   Me considero una persona feliz que le gusta dar y resivir amor, mis amigos son todo y por algunos hasta dejaria la vida, ya que para mi el tiempo es lo mas valioso.
+                <p class="sobreMi">  Soy una persona resiliente con una determinación innegable, una persona que busca lo que quiere y no para hasta conseguirlo.
+                    Me considero una persona feliz, a la que le gusta dar y recibir amor. Mis amigos son todo, y por algunos hasta dejaría la vida, ya que para mí el tiempo es lo más valioso.
         </div>
      </section>
      <section class="tecnologias">
@@ -25,7 +26,7 @@
         <p></p>
         <div class="fotos">
             <p class="pfotos1">html</p>
-            <img class="radio" src="https://imgs.search.brave.com/np9Suzrp_3kNkWQhHCshEnLZq-1foqWL_DUMi9XXyWE/rs:fit:860:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvY29tbW9ucy8z/LzM4L0hUTUw1X0Jh/ZGdlLnN2Zw.svg" alt="html">
+            <img class="radio" src="https://cdn-icons-png.flaticon.com/128/1051/1051277.png">
             <p class="pfotos2">css</p>
             <img class="radio" src="https://imgs.search.brave.com/eqhJaj3kSr1R7zEc2KceOWNwUGTHQxNOgZ5vj6Xy6hw/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9kZXNh/cnJvbGxvd2ViLmNv/bS9zdG9yYWdlL3Rh/Z19pbWFnZXMvYWN0/dWFsL3NUMVJMcERI/ekluQVR1S25EVWt3/WGhLb2FJT3J0Uzk3/Z0J0Z2lRNk0ucG5n" alt="css">
             <p class="pfotos3">javascript</p>
@@ -61,6 +62,7 @@
         </div>
     </section>
 </footer>
+<script src="./scripts/model.js"></script>
 <script src="./scripts/index.js"></script>
 </body>
 </html>
